Fix dashboard alignment issues

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -503,3 +503,9 @@ span.glyphicon-wrench {
 .homepage-blurb {
   font-size: 20px;
 }
+
+/*dashboard*/
+
+#fillgauge3 {
+  padding-top: 40px;
+}
